--- a/reflection/underconstruction.html
+++ b/reflection/underconstruction.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 3</title>
+    <title>Written Reflection</title>
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
@@ -16,8 +16,8 @@
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="../about.html">About</a></li>
                     <li><a href="../assignment2/underconstruction.html">Assignment 2</a></li>
-                    <li><a href="underconstruction.html">Assignment 3</a></li>
-                    <li><a href="../reflection/underconstruction.html">Written Reflection</a></li>
+                    <li><a href="../assignment3/underconstruction.html">Assignment 3</a></li>
+                    <li><a href="underconstruction.html">Written Reflection</a></li>
                 </ul>
             </nav>
         </div>
@@ -25,7 +25,7 @@
 
     <main class="construction">
         <div>
-            <h1>Assignment 3</h1>
+            <h1>Written Reflection</h1>
             <h2>Under Construction!</h2>
 
             <h3>Please come back later :)</h3>
