--- a/assignment2/underconstruction.html
+++ b/assignment2/underconstruction.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 2</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <!-- decide if wanna do alter ego or not -->
@@ -16,16 +17,19 @@
                     <li><a href="../about.html">About</a></li>
                     <li><a href="underconstruction.html">Assignment 2</a></li>
                     <li><a href="../assignment3/underconstruction.html">Assignment 3</a></li>
+                    <li><a href="../reflection/underconstruction.html">Written Reflection</a></li>
                 </ul>
             </nav>
         </div>
     </header><!-- end of header -->
 
-    <main>
-        <h1>Assignment 2</h1>
-        <h2>Under Construction!</h2>
+    <main class="construction">
+        <div>
+            <h1>Assignment 2</h1>
+            <h2>Under Construction!</h2>
 
-        <h3>Please come back later :)</h3>
+            <h3>Please come back later :)</h3>
+        </div>
     </main><!-- end of main -->
 
     <footer>
