--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- decide if wanna do alter ego or not -->
@@ -16,6 +17,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="assignment2/underconstruction.html">Assignment 2</a></li>
                     <li><a href="assignment3/underconstruction.html">Assignment 3</a></li>
+                    <li><a href="reflection/underconstruction.html">Written Reflection</a></li>
                 </ul>
             </nav>
         </div>
@@ -26,9 +28,22 @@
         <h2>Alter ego??</h2>
 
         <h3>Interesting Websites</h3>
-        <ul>
-            <li><a href="https://runway.com">https://runway.com</a></li>
-        </ul>
+        <div id="websites">
+            <ul>
+                <li><a href="https://runway.com">https://runway.com</a></li>
+                <li><a href="#">Coming Soon</a></li>
+                <li><a href="#">Coming Soon</a></li>
+                <li><a href="#">Coming Soon</a></li>
+                <li><a href="#">Coming Soon</a></li>
+                <li><a href="#">Coming Soon</a></li>
+                <li><a href="#">Coming Soon</a></li>
+                <li><a href="#">Coming Soon</a></li>
+                <li><a href="#">Coming Soon</a></li>
+                <li><a href="#">Coming Soon</a></li>
+                <li><a href="#">Coming Soon</a></li>
+            </ul>
+        </div>
+        
     </main><!-- end of main -->
 
     <footer>
