Basically everything got updated and made to look nice

--- a/about.html
+++ b/about.html
@@ -7,36 +7,42 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- decide if wanna do alter ego or not -->
     <header>
-        <div><!-- logo here --></div>
-        <div>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="assignment2/underconstruction.html">Assignment 2</a></li>
-                    <li><a href="assignment3/underconstruction.html">Assignment 3</a></li>
-                    <li><a href="reflection/underconstruction.html">Written Reflection</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="assignment2/underconstruction.html">Assignment 2</a></li>
+                <li><a href="assignment3/underconstruction.html">Assignment 3</a></li>
+                <li><a href="reflection/underconstruction.html">Reflection</a></li>
+            </ul>
+        </nav>
     </header><!-- end of header -->
 
     <main>
-        <h1>About</h1>
-        <h2>Alter ego??</h2>
+        <h1>About Me!</h1>
 
-        <p>Something about self/alter ego</p>
+        <hr>
 
-        <h3>Interests!</h3>
-        <li></li>
+        <p>I'm a computer science student interested in making cool websites! I'm majoring in Computer Science and hoping to get the Web Programming Certificate along the way, so hopefully I can keep making cool websites.</p>
 
-        <!-- hidden easter egg?? -->
+        <hr>
+
+        <h2>Interests!</h2>
+        <ul>
+            <li>Reading</li>
+            <li>Listening to Music</li>
+            <li>Cross-Stitch</li>
+            <li>Painting</li>
+            <li>Playing Ukulele</li>
+        </ul>
+
+        <a href="https://www.youtube.com/watch?v=NtsJ5m6C7dU"><img src="images/leaf.png" alt="icon of a leaf"></a>
     </main><!-- end of main -->
 
     <footer>
-
+        <p>Background Image: <a href="https://unsplash.com/photos/green-leaf-plants-xljtGZ2-P3Y">Nahail Naseer on Unsplash</a></p>
+        <p>Leaf Icon: <a href="https://www.phylopic.org/images/4cc65fda-dd59-4035-af92-d6f09bbc7496/fraxinus-excelsior">Pablo Castro Sánchez-Bermejo on PhyloPic</a></p>
     </footer><!-- end of footer -->
 </body>
 </html>
