--- a/index.html
+++ b/index.html
@@ -7,47 +7,41 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- decide if wanna do alter ego or not -->
     <header>
-        <div><!-- logo here --></div>
-        <div>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="assignment2/underconstruction.html">Assignment 2</a></li>
-                    <li><a href="assignment3/underconstruction.html">Assignment 3</a></li>
-                    <li><a href="reflection/underconstruction.html">Written Reflection</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="assignment2/underconstruction.html">Assignment 2</a></li>
+                <li><a href="assignment3/underconstruction.html">Assignment 3</a></li>
+                <li><a href="reflection/underconstruction.html">Reflection</a></li>
+            </ul>
+        </nav>
     </header><!-- end of header -->
 
     <main>
-        <h1>Website Title~</h1>
-        <h2>Alter ego??</h2>
+        <h1>Jenny Sims</h1>
+        <h2>Portfolio</h2>
+        
+        <hr>
 
         <h3>Interesting Websites</h3>
-        <div id="websites">
-            <ul>
-                <li><a href="https://runway.com">https://runway.com</a></li>
-                <li><a href="#">Coming Soon</a></li>
-                <li><a href="#">Coming Soon</a></li>
-                <li><a href="#">Coming Soon</a></li>
-                <li><a href="#">Coming Soon</a></li>
-                <li><a href="#">Coming Soon</a></li>
-                <li><a href="#">Coming Soon</a></li>
-                <li><a href="#">Coming Soon</a></li>
-                <li><a href="#">Coming Soon</a></li>
-                <li><a href="#">Coming Soon</a></li>
-                <li><a href="#">Coming Soon</a></li>
-            </ul>
-        </div>
-        
+        <ul>
+            <li><a href="https://runway.com">https://runway.com</a></li>
+            <li><a href="#">Coming Soon</a></li>
+            <li><a href="#">Coming Soon</a></li>
+            <li><a href="#">Coming Soon</a></li>
+            <li><a href="#">Coming Soon</a></li>
+            <li><a href="#">Coming Soon</a></li>
+            <li><a href="#">Coming Soon</a></li>
+            <li><a href="#">Coming Soon</a></li>
+            <li><a href="#">Coming Soon</a></li>
+            <li><a href="#">Coming Soon</a></li>
+        </ul>
     </main><!-- end of main -->
 
     <footer>
-
+        <p>Background Image: <a href="https://unsplash.com/photos/green-leaf-plants-xljtGZ2-P3Y">Nahail Naseer on Unsplash</a></p>
     </footer><!-- end of footer -->
 </body>
 </html>
