--- a/reflection/underconstruction.html
+++ b/reflection/underconstruction.html
@@ -7,33 +7,29 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <!-- decide if wanna do alter ego or not -->
     <header>
-        <div><!-- logo here --></div>
-        <div>
-            <nav>
-                <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../about.html">About</a></li>
-                    <li><a href="../assignment2/underconstruction.html">Assignment 2</a></li>
-                    <li><a href="../assignment3/underconstruction.html">Assignment 3</a></li>
-                    <li><a href="underconstruction.html">Written Reflection</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../about.html">About</a></li>
+                <li><a href="../assignment2/underconstruction.html">Assignment 2</a></li>
+                <li><a href="../assignment3/underconstruction.html">Assignment 3</a></li>
+                <li><a href="underconstruction.html">Reflection</a></li>
+            </ul>
+        </nav>
     </header><!-- end of header -->
 
-    <main class="construction">
-        <div>
-            <h1>Written Reflection</h1>
-            <h2>Under Construction!</h2>
+    <main>
+        <h1>Written Reflection</h1>
+        <h2>Under Construction!</h2>
 
-            <h3>Please come back later :)</h3>
-        </div>
+        <hr>
+
+        <h3>Please come back later :)</h3>
     </main><!-- end of main -->
 
     <footer>
-
+        <p>Background Image: <a href="https://unsplash.com/photos/green-leaf-plants-xljtGZ2-P3Y">Nahail Naseer on Unsplash</a></p>
     </footer><!-- end of footer -->
 </body>
 </html>
