Updated youtube link

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
             <li>Playing Ukulele</li>
         </ul>
 
-        <a href="https://www.youtube.com/watch?v=NtsJ5m6C7dU"><img src="images/leaf.png" alt="icon of a leaf"></a>
+        <a href="https://youtu.be/pZVdQLn_E5w"><img src="images/leaf.png" alt="icon of a leaf"></a>
     </main><!-- end of main -->
 
     <footer>
