Starting media queries / hamburger nav

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
                 <li><a href="reflection/underconstruction.html">Reflection</a></li>
             </ul>
         </nav>
+
+        <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
     </header><!-- end of header -->
 
     <main>
