--- a/assignment3/underconstruction.html
+++ b/assignment3/underconstruction.html
@@ -8,14 +8,20 @@
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="../about.html">About</a></li>
-                <li><a href="../assignment2/underconstruction.html">Assignment 2</a></li>
-                <li><a href="underconstruction.html">Assignment 3</a></li>
-                <li><a href="../reflection/underconstruction.html">Reflection</a></li>
+        <nav class="nav">
+            <ul class="nav-menu">
+                <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="../about.html">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="../assignment2/underconstruction.html">Assignment 2</a></li>
+                <li class="nav-item"><a class="nav-link" href="underconstruction.html">Assignment 3</a></li>
+                <li class="nav-item"><a class="nav-link" href="../reflection/underconstruction.html">Reflection</a></li>
             </ul>
+        
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
         </nav>
     </header><!-- end of header -->
 
@@ -31,5 +37,6 @@
     <footer>
         <p>Background Image: <a href="https://unsplash.com/photos/green-leaf-plants-xljtGZ2-P3Y">Nahail Naseer on Unsplash</a></p>
     </footer><!-- end of footer -->
+    <script src="../script.js"></script>
 </body>
 </html>
