--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h3>Interesting Websites</h3>
         <ul>
             <li><a href="https://runway.com">https://runway.com</a></li>
-            <li><a href="#">Coming Soon</a></li>
+            <li><a href="https://bryantcodes.art">https://bryantcodes.art</a></li>
             <li><a href="#">Coming Soon</a></li>
             <li><a href="#">Coming Soon</a></li>
             <li><a href="#">Coming Soon</a></li>
