Changed styling to contrast more

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
             <li>Playing Ukulele</li>
         </ul>
 
-        <a href="https://youtu.be/pZVdQLn_E5w"><img src="images/leaf.png" alt="icon of a leaf"></a>
+        <a class="img" href="https://youtu.be/pZVdQLn_E5w"><img src="images/leaf2.png" alt="stem with eight symmetrical leaves on the side and one at the top"></a>
     </main><!-- end of main -->
 
     <footer>
