--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <hr>
 
         <h3>Interesting Websites</h3>
-        <ul>
-            <li><a href="https://runway.com">https://runway.com</a></li>
-            <li><a href="https://bryantcodes.art">https://bryantcodes.art</a></li>
+        <ul class="websites">
+            <li>Runway, a financial company:<a href="https://runway.com">https://runway.com</a></li>
+            <li>BryantCodes, an interactive portfolio:<a href="https://bryantcodes.art">https://bryantcodes.art</a></li>
             <li><a href="#">Coming Soon</a></li>
             <li><a href="#">Coming Soon</a></li>
             <li><a href="#">Coming Soon</a></li>
