Changed wording of about me and alt text

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
         <hr>
 
-        <p>I'm a computer science student interested in making cool websites! I'm majoring in Computer Science and hoping to get the Web Programming Certificate along the way, so hopefully I can keep making cool websites.</p>
+        <p>I'm a computer science student interested in making cool websites! I'm majoring in Computer Science and aiming to get the Web Programming Certificate along the way, so hopefully I can keep making cool websites.</p>
 
         <hr>
 
@@ -43,7 +43,7 @@
             <li>Playing Ukulele</li>
         </ul>
 
-        <a class="img" href="https://youtu.be/pZVdQLn_E5w"><img src="images/leaf2.png" alt="stem with eight symmetrical leaves on the side and one at the top"></a>
+        <a class="img" href="https://youtu.be/pZVdQLn_E5w"><img src="images/leaf2.png" alt="stem with nine leaves"></a>
     </main><!-- end of main -->
 
     <footer>
