Setting up grid layout

--- a/broadsheet/broadsheet.html
+++ b/broadsheet/broadsheet.html
@@ -7,6 +7,51 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- <img src="https://resource.download.wjec.co.uk/vtc/2016-17/16-17_1-33/website/images/activities/language/3-tabloid-vs-broadsheet/newspaper-the-guardian.png" alt=""> -->
+    <!-- https://css-tricks.com/snippets/css/complete-guide-grid/ -->
     
+    <div class="grid-container">
+        <div class="header">
+            <h1>All About the Internet</h1>
+        </div>
+        <div class="left">
+            <!-- <h2>The History</h2> -->
+            <div class="columnL">
+                <h2>The History</h2>
+                <p>
+                    here are some words about the history of the internet<br>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque, mollitia aperiam, illum ipsum nihil ut natus dolore eos molestiae incidunt ab asperiores nisi doloribus veritatis sunt quidem omnis vero blanditiis autem alias quam ratione quos. Nisi perferendis iste amet, nihil, dolorum labore illum facere exercitationem nostrum aspernatur laborum, accusamus adipisci. Velit iste consequuntur nesciunt debitis repellendus vel obcaecati sit deserunt itaque cupiditate sapiente omnis consectetur tempore quia quod enim, perferendis non aspernatur nemo, quisquam architecto earum nam dolores unde. Aliquid.
+                </p>
+            </div>
+            <div class="columnL">
+                <p>
+                    here are more words teehee<br>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil neque saepe repellendus quasi iusto eveniet, possimus qui natus cumque error quod sed molestias excepturi suscipit impedit necessitatibus inventore autem exercitationem! Iure exercitationem asperiores, magni cupiditate sed, ipsum perferendis repellat eligendi veritatis assumenda modi nostrum possimus, earum quas a similique. Facilis.
+                </p>
+            </div>
+        </div>
+        <div class="right">
+            <div class="columnR">
+                <h2>This is another story</h2>
+                <p>
+                    with more words<br>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil neque saepe repellendus quasi iusto eveniet, possimus qui natus cumque error quod sed molestias excepturi suscipit impedit necessitatibus inventore autem exercitationem! Iure exercitationem asperiores, magni cupiditate sed, ipsum perferendis repellat eligendi veritatis assumenda modi nostrum possimus, earum quas a similique. Facilis.
+                </p>
+            </div>
+            <div class="columnR">
+                <p>
+                    and even more<br>
+                    <h3>Subsection</h3>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil neque saepe repellendus quasi iusto eveniet, possimus qui natus cumque error quod sed molestias excepturi suscipit impedit necessitatibus inventore autem exercitationem! Iure exercitationem asperiores, magni cupiditate sed, ipsum perferendis repellat eligendi veritatis assumenda modi nostrum possimus, earum quas a similique. Facilis.
+                </p>
+            </div>
+            <div class="columnR">
+                <p>
+                    much word so wow<br>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil neque saepe repellendus quasi iusto eveniet, possimus qui natus cumque error quod sed molestias excepturi suscipit impedit necessitatibus inventore autem exercitationem! Iure exercitationem asperiores, magni cupiditate sed, ipsum perferendis repellat eligendi veritatis assumenda modi nostrum possimus, earum quas a similique. Facilis.
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
