Changed assignment links

--- a/reflection/underconstruction.html
+++ b/reflection/underconstruction.html
@@ -12,9 +12,7 @@
             <ul class="nav-menu">
                 <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="../about.html">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="../assignment2/underconstruction.html">Assignment 2</a></li>
-                <li class="nav-item"><a class="nav-link" href="../assignment3/underconstruction.html">Assignment 3</a></li>
-                <li class="nav-item"><a class="nav-link" href="underconstruction.html">Reflection</a></li>
+                <li class="nav-item"><a class="nav-link" href="../assignments.html">Assignments</a></li>
             </ul>
         
             <div class="hamburger">
