--- a/assignments.html
+++ b/assignments.html
@@ -29,7 +29,7 @@
         <hr>
 
         <ul class="assignments">
-            <li><a href="broadsheet/broadsheet.html">Internet Broadsheet</a></li>
+            <li><a href="assignment2/broadsheet.html">Internet Broadsheet</a></li>
             <li><a href="assignment3/underconstruction.html">Assignment 3</a></li>
             <li><a href="reflection/underconstruction.html">Written Reflection</a></li>
             <li><a href="#">Coming Soon</a></li>
