Finished garden transformation

--- a/assignment3/transformation.html
+++ b/assignment3/transformation.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment 3</title>
+    <title>Garden</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,46 +11,20 @@
         <nav class="nav">
             <ul class="nav-menu">
                 <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="../about.html">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="../assignments.html">Assignments</a></li>
             </ul>
-        
-            <div class="hamburger">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </div>
+            <button id="mute"><img src="/images/mute.png" alt="mute"></button>
+            <button id="toggle"><img src="/images/day-and-night.png" alt="sun and moon toggle"></button>
         </nav>
     </header><!-- end of header -->
 
     <main>
-        <h1>Gallery</h1>
-
-        <hr>
-
-        <div id="gallery">
-            <div class="slideshow">
-                
-            </div>
-            <div class="grid">
-                <div class="row1">
-                    <img src="https://images.unsplash.com/photo-1618706548227-e840a64ccc04?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="https://unsplash.com/photos/green-cactus-plants-on-brown-clay-pots-5IeNo4-rkQs">
-                    <img src="https://images.unsplash.com/photo-1622576953198-387ca11028a3?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="https://unsplash.com/photos/green-cactus-plant-on-brown-clay-pot-eVeS0SnUxqw">
-                    <img src="https://images.unsplash.com/photo-1601985705806-5b9a71f6004f?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="https://unsplash.com/photos/green-potted-plants-on-brown-wooden-seat-dDVU6D_6T80">
-                    <img src="https://images.unsplash.com/photo-1536069221282-d877868cad6b?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="https://unsplash.com/photos/green-succulent-plant-REk6cxrceoQ">
-                </div>
-                <div class="row2">
-                    <img src="https://images.unsplash.com/photo-1599148401005-fe6d7497cb5e?q=80&w=927&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="https://unsplash.com/photos/green-fern-plant-in-close-up-photography-r0M9HrfJMBM">
-                    <img src="https://images.unsplash.com/photo-1463320898484-cdee8141c787?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="https://unsplash.com/photos/shallow-focus-photography-of-potted-plants-UcfKYTan-LU">
-                    <img src="https://images.unsplash.com/photo-1499624412197-fdc740373527?q=80&w=869&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="https://unsplash.com/photos/white-votive-candle-near-plant-pot-45Do2rmZk3E">
-                    <img src="https://images.unsplash.com/photo-1597073803906-4ae6263f5c9e?q=80&w=987&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="https://unsplash.com/photos/green-plant-on-white-round-pot-k3r3J8Og4gw">
-                </div>
-            </div>
-        </div>
+        <audio id="audio" autoplay loop></audio>
     </main><!-- end of main -->
 
     <footer>
-        <p>Background Image: <a href="https://unsplash.com/photos/green-leaf-plants-xljtGZ2-P3Y">Nahail Naseer on Unsplash</a></p>
+        <p>Day Garden: <a href="https://unsplash.com/photos/opened-door-of-house-iI72r3gSwWY">Arno Smit on Unsplash</a></p>
+        <p>Night Garden: <a href="https://unsplash.com/photos/photo-of-brown-wooden-house-beside-leafed-plants-ziwVrFB6Y7Y">Lopez Robin on Unsplash</a></p>
+        <p>Day and Night Toggle: <a href="https://www.flaticon.com/free-icons/day-and-night" title="day and night icons">Saepul Nahwan on Flaticon</a></p>
     </footer><!-- end of footer -->
     <script src="script.js"></script>
 </body>
