--- a/assignments.html
+++ b/assignments.html
@@ -30,7 +30,7 @@
 
         <ul class="assignments">
             <li><a href="assignment2/broadsheet.html">Internet Broadsheet</a></li>
-            <li><a href="assignment3/transformation.html">Gallery</a></li>
+            <li><a href="assignment3/transformation.html">Garden</a></li>
             <li><a href="reflection/underconstruction.html">Written Reflection</a></li>
             <li><a href="#">Coming Soon</a></li>
             <li><a href="#">Coming Soon</a></li>
