Saving before I start changing widths

--- a/assignment4/1static.html
+++ b/assignment4/1static.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Static</title>
+        <title>Static</title>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
 
-    <script src="libraries/p5.min.js"></script>
-    <script src="libraries/p5.sound.min.js"></script>
-  </head>
+        <script src="libraries/p5.min.js"></script>
+        <script src="libraries/p5.sound.min.js"></script>
+    </head>
 
-  <body>
-    <header>
-        <nav class="nav">
-            <ul class="nav-menu">
-                <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="2animated-loop.html">Animated Loop</a></li>
-                <li class="nav-item"><a class="nav-link" href="3responsive.html">Responsive</a></li>
-            </ul>
-        </nav>
-    </header><!-- end of header -->
-    <script src="1static.js"></script>
-  </body>
+    <body>
+        <header>
+            <nav class="nav">
+                <ul class="nav-menu">
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="2animated-loop.html">Animated Loop</a></li>
+                    <li class="nav-item"><a class="nav-link" href="3responsive.html">Responsive</a></li>
+                </ul>
+            </nav>
+        </header><!-- end of header -->
+        <footer>
+        
+        </footer>
+        <script src="1static.js"></script>
+    </body>
 </html>
