Added link to assignment 4

--- a/assignments.html
+++ b/assignments.html
@@ -31,8 +31,8 @@
         <ul class="assignments">
             <li><a href="assignment2/broadsheet.html">Internet Broadsheet</a></li>
             <li><a href="assignment3/transformation.html">Garden</a></li>
+            <li><a href="assignment4/1static.html">P5.JS Painting; Kandinsky, Several Circles, 1926</a></li>
             <li><a href="reflection/underconstruction.html">Written Reflection</a></li>
-            <li><a href="#">Coming Soon</a></li>
             <li><a href="#">Coming Soon</a></li>
             <li><a href="#">Coming Soon</a></li>
             <li><a href="#">Coming Soon</a></li>
