--- a/assignment4/1static.html
+++ b/assignment4/1static.html
@@ -19,6 +19,7 @@
                     <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="2animated-loop.html">Animated Loop</a></li>
                     <li class="nav-item"><a class="nav-link" href="3responsive.html">Responsive</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://commons.wikimedia.org/wiki/File:Vassily_Kandinsky,_1926_-_Several_Circles,_Gugg_0910_25.jpg">Painting</a></li>
                 </ul>
             </nav>
         </header><!-- end of header -->
