--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <li>Runway, a financial company:<a href="https://runway.com">https://runway.com</a></li>
             <li>BryantCodes, an interactive portfolio:<a href="https://bryantcodes.art">https://bryantcodes.art</a></li>
             <li>Sandspiel, a falling sand game:<a href="https://sandspiel.club/">https://sandspiel.club/</a></li>
-            <li>Drive & Listen, footage of driving in multiple countries<a href="https://driveandlisten.herokuapp.com/">https://driveandlisten.herokuapp.com/</a></li>
-            <li><a href="#">Coming Soon</a></li>
+            <li>Drive & Listen, footage of driving in multiple countries:<a href="https://driveandlisten.herokuapp.com/">https://driveandlisten.herokuapp.com/</a></li>
+            <li>Earth, a live map of global winds:<a href="https://earth.nullschool.net/">https://earth.nullschool.net/</a></li>
             <li><a href="#">Coming Soon</a></li>
             <li><a href="#">Coming Soon</a></li>
             <li><a href="#">Coming Soon</a></li>
