Added files for every branch

--- a/assignment5/cf/silence.html
+++ b/assignment5/cf/silence.html
@@ -14,13 +14,13 @@
     </nav>
     <h1 class="display-1 text-center">Study Spots on Campus</h1>
 
-    <h2 class="display-4 text-center">Where are you nearest?</h2>
+    <h3 class="display-6 text-center">CS Student Edition</h3>
+
+    <h2 class="display-4 text-center">Do you want windows?</h2>
 
     <ul>
-        <li><a href="cf/cf.html">CF Building</a></li>
-        <li><a href="arntzen/arntzen.html">Arntzen</a></li>
-        <li><a href="library/library.html">Library</a></li>
-        <li><a href="vu/vu.html">VU</a></li>
+        <li><a href="basement.html">I'm fine without.</a></li>
+        <li><a href="empty-classroom.html">Obviously.</a></li>
     </ul>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
