--- a/assignments.html
+++ b/assignments.html
@@ -33,7 +33,7 @@
             <li><a href="assignment3/transformation.html">Garden</a></li>
             <li><a href="assignment4/1static.html">P5.JS Painting; Kandinsky, Several Circles, 1926</a></li>
             <li><a href="reflection/reflection.html">Written Reflection</a></li>
-            <li><a href="assignment5/mobile.html">Mobile Site</a></li>
+            <li><a href="assignment5/mobile.html">Mindfulness Exercise - Stadium Piece</a></li>
             <li><a href="#">Coming Soon</a></li>
             <li><a href="#">Coming Soon</a></li>
             <li><a href="#">Coming Soon</a></li>
