Updated margins and typo

--- a/assignment5/mobile.html
+++ b/assignment5/mobile.html
@@ -48,7 +48,7 @@
             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                 <strong>What are some of the struggles that you have faced?</strong><br>
-                Things you thought were impossible to get through until you were on the other side. Things that may not seen bad to others, but were awful to you. Things that put yourself to the test, either physically, mentally, or emotionally. Please share if you're comfortable.
+                Things you thought were impossible to get through until you were on the other side. Things that may not seem bad to others, but were awful to you. Things that put yourself to the test, either physically, mentally, or emotionally. Please share if you're comfortable.
                 </div>
             </div>
         </div>
