--- a/assignment5/mobile.html
+++ b/assignment5/mobile.html
@@ -25,7 +25,7 @@
 
     <p class="lead text-center">Life is a series of ups and downs, like this sculpture. This is an opportunity to reflect on your own highs and lows as you walk up and down the stairs.</p>
 
-    <div class="accordion" id="accordionExample">
+    <div class="accordion">
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
