--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li>Sandspiel, a falling sand game:<a href="https://sandspiel.club/">https://sandspiel.club/</a></li>
             <li>Drive & Listen, footage of driving in multiple countries:<a href="https://driveandlisten.herokuapp.com/">https://driveandlisten.herokuapp.com/</a></li>
             <li>Earth, a live map of global winds:<a href="https://earth.nullschool.net/">https://earth.nullschool.net/</a></li>
-            <li><a href="#">Coming Soon</a></li>
+            <li>Scale of the Universe, a scrollable experience through different objects and their sizes comparatively: <a href="https://scaleofuniverse.com/en">https://scaleofuniverse.com/en</a></li>
             <li><a href="#">Coming Soon</a></li>
             <li><a href="#">Coming Soon</a></li>
             <li><a href="#">Coming Soon</a></li>
