--- a/assignment6/collection.html
+++ b/assignment6/collection.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+            </ul>
+        </nav>
+    </header>
+    
     <h1>Clue Games</h1>
     <div id="content"></div>
 
