--- a/assignment6/collection.html
+++ b/assignment6/collection.html
@@ -14,13 +14,16 @@
             </ul>
         </nav>
     </header>
-    
+
     <h1>Clue Games</h1>
     <div id="content"></div>
 
     <footer>
-        <p>Reference: <a href = "https://www.weather.gov/media/lmk/soo/cloudchart.pdf" target="_blank">Cloud classification from weather.gov</a> 
-        | images & text from <a href = "https://en.wikipedia.org/wiki/List_of_cloud_types">Wikipedia</a> &#128154;</p>
+        <p>
+            Sources: Amazon & Wikipedia & 
+            <a href="https://boardgamegeek.com/boardgame/1294/clue/versions">Board Game Geek</a> & 
+            <a href="https://www.geekyhobbies.com/clue-and-cluedo-the-complete-list-of-all-themed-games-and-spinoffs/">Geeky Hobbies</a>
+        </p>
     </footer>
     <script src="script.js"></script>
 </body>
