--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li>Drive & Listen, footage of driving in multiple countries:<a href="https://driveandlisten.herokuapp.com/">https://driveandlisten.herokuapp.com/</a></li>
             <li>Earth, a live map of global winds:<a href="https://earth.nullschool.net/">https://earth.nullschool.net/</a></li>
             <li>Scale of the Universe, a scrollable experience through different objects and their sizes comparatively: <a href="https://scaleofuniverse.com/en">https://scaleofuniverse.com/en</a></li>
-            <li><a href="#">Coming Soon</a></li>
+            <li>Wonders of Street View, a collection of fun places found around the world: <a href="https://neal.fun/wonders-of-street-view/">https://neal.fun/wonders-of-street-view/</a></li>
             <li><a href="#">Coming Soon</a></li>
             <li><a href="#">Coming Soon</a></li>
             <li><a href="#">Coming Soon</a></li>
