--- a/assignments.html
+++ b/assignments.html
@@ -35,7 +35,7 @@
             <li><a href="reflection/reflection.html">Written Reflection</a></li>
             <li><a href="assignment5/mobile.html">Mindfulness Exercise - Stadium Piece</a></li>
             <li><a href="assignment6/collection.html">Clue Game Collection</a></li>
-            <li><a href="assignment7/elizabot/index.html">Eliza</a></li>
+            <li><a href="assignment7/elizabot/index.html">Aspen - ELIZA Bot</a></li>
             <li><a href="#">Coming Soon</a></li>
             <li><a href="#">Coming Soon</a></li>
         </ul>
