--- a/assignment7/elizabot/index.html
+++ b/assignment7/elizabot/index.html
@@ -1,6 +1,6 @@
 <HTML>
 <HEAD>
-	<TITLE>Eliza (elizabot.js)</TITLE>
+	<TITLE>Aspen</TITLE>
 	<SCRIPT LANGUAGE="JavaScript" TYPE="text/javascript" SRC="elizabot.js"></SCRIPT>
 	<SCRIPT LANGUAGE="JavaScript" TYPE="text/javascript" SRC="elizadata.js"></SCRIPT>
   <link rel="stylesheet" href="style.css">
@@ -77,6 +77,8 @@ function elizaStep() {
 </FORM>
 </TABLE>
 </CENTER>
+
+<a class="chatgpt" href="ChatGPT.txt">ChatGPT Conversation</a>
 
 </BODY>
 </HTML>
