Updating websites and assignment links

--- a/index.html
+++ b/index.html
@@ -30,17 +30,48 @@
         <hr>
 
         <h3>Interesting Websites</h3>
+        <br>
         <ul class="websites">
-            <li>Runway, a financial company:<a href="https://runway.com">https://runway.com</a></li>
-            <li>BryantCodes, an interactive portfolio:<a href="https://bryantcodes.art">https://bryantcodes.art</a></li>
-            <li>Sandspiel, a falling sand game:<a href="https://sandspiel.club/">https://sandspiel.club/</a></li>
-            <li>Drive & Listen, footage of driving in multiple countries:<a href="https://driveandlisten.herokuapp.com/">https://driveandlisten.herokuapp.com/</a></li>
-            <li>Earth, a live map of global winds:<a href="https://earth.nullschool.net/">https://earth.nullschool.net/</a></li>
-            <li>Scale of the Universe, a scrollable experience through different objects and their sizes comparatively: <a href="https://scaleofuniverse.com/en">https://scaleofuniverse.com/en</a></li>
-            <li>Wonders of Street View, a collection of fun places found around the world: <a href="https://neal.fun/wonders-of-street-view/">https://neal.fun/wonders-of-street-view/</a></li>
-            <li><a href="#">Coming Soon</a></li>
-            <li><a href="#">Coming Soon</a></li>
-            <li><a href="#">Coming Soon</a></li>
+            <li>Runway, a financial company:
+                <br><a href="https://runway.com">https://runway.com</a>
+            </li>
+            <br>
+            <li>BryantCodes, an interactive portfolio:
+                <br><a href="https://bryantcodes.art">https://bryantcodes.art</a>
+            </li>
+            <br>
+            <li>Sandspiel, a falling sand game:
+                <br><a href="https://sandspiel.club/">https://sandspiel.club/</a>
+            </li>
+            <br>
+            <li>Drive & Listen, footage of driving in multiple countries:
+                <br><a href="https://driveandlisten.herokuapp.com/">https://driveandlisten.herokuapp.com/</a>
+            </li>
+            <br>
+            <li>Earth, a live map of global winds:
+                <br><a href="https://earth.nullschool.net/">https://earth.nullschool.net/</a>
+            </li>
+            <br>
+            <li>Scale of the Universe, a scrollable experience through different objects and their sizes:
+                <br><a href="https://scaleofuniverse.com/en">https://scaleofuniverse.com/en</a>
+            </li>
+            <br>
+            <li>Wonders of Street View, a collection of fun places found around the world:
+                <br><a href="https://neal.fun/wonders-of-street-view/">https://neal.fun/wonders-of-street-view/</a>
+            </li>
+            <br>
+            <li>Flight Radar, a live view of planes around the world:
+                <br><a href="https://www.flightradar24.com/">https://www.flightradar24.com/</a>
+            </li>
+            <br>
+            <li>Zoom Quilt, an infinitely zooming in piece of art:
+                <br><a href="https://zoomquilt.org/">https://zoomquilt.org/</a>
+            </li>
+            <br>
+            <li>Click the Red Button, a random assortment of interesting websites:
+                <br><a href="https://clicktheredbutton.com/">https://clicktheredbutton.com/</a>
+            </li>
+            <br>
         </ul>
     </main><!-- end of main -->
 
