Added final project to assignments

--- a/assignments.html
+++ b/assignments.html
@@ -37,7 +37,7 @@
             <li><a href="assignment6/collection.html">Clue Game Collection</a></li>
             <li><a href="assignment7/elizabot/index.html">Aspen - ELIZA Bot</a></li>
             <li><a href="final-project/Figma/Jenny Sims - Final Project Proposal.pdf" target="_tab">Final Project Proposal</a></li>
-            <li><a href="#">Coming Soon</a></li>
+            <li><a href="https://simsj6.wixsite.com/plantastic">Final Project: Plantastic</a></li>
         </ul>
     </main><!-- end of main -->
 
