Added final project documentation links

--- a/final-project/plantastic.html
+++ b/final-project/plantastic.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <header>
@@ -24,20 +24,12 @@
     </header><!-- end of header -->
 
     <main>
-        <h1>Assignments</h1>
+        <h1>Plantastic</h1>
 
         <hr>
 
         <ul class="assignments">
-            <li><a href="assignment2/broadsheet.html">Internet Broadsheet</a></li>
-            <li><a href="assignment3/transformation.html">Garden</a></li>
-            <li><a href="assignment4/1static.html">P5.JS Painting; Kandinsky, Several Circles, 1926</a></li>
-            <li><a href="reflection/reflection.html">Written Reflection</a></li>
-            <li><a href="assignment5/mobile.html">Mindfulness Exercise - Stadium Piece</a></li>
-            <li><a href="assignment6/collection.html">Clue Game Collection</a></li>
-            <li><a href="assignment7/elizabot/index.html">Aspen - ELIZA Bot</a></li>
-            <li><a href="final-project/Figma/Jenny Sims - Final Project Proposal.pdf" target="_tab">Final Project Proposal</a></li>
-            <li><a href="final-project/plantastic.html">Plantastic</a></li>
+            <li><a href="https://github.com/simsj6/plantastic">Plantastic Repository</a></li>
         </ul>
     </main><!-- end of main -->
 
